--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -43,4 +43,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: Static-Site-Assets
-          path: public/usidiamond.github.io/
+          path: public/trasrally.github.io/
