--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy static content to Pages
 
 on:
   # Runs on pushes targeting the default branch
-  push :
+  push:
     branches: ["main"]
 
   # Allows you to run this workflow manually from the Actions tab
@@ -44,3 +44,22 @@ jobs:
         with:
           name: Static-Site-Assets
           path: public/transrally.github.io/
+
+  # Single deploy job since we're just deploying
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: github-pages
+      url: ${{steps.deployment.outputs.page_url}}
+    steps:
+      - uses: actions/download-artifact@master
+        with:
+          name: Static-Site-Assets
+          path: .
+      - uses: actions/configure-pages@v1
+      - uses: actions/upload-pages-artifact@v1
+        with:
+          path: .
+      - id: deployment
+        uses: actions/deploy-pages@main
