--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,7 +56,7 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           name: Static-Site-Assets
-          path: .
+          path: public/transrally.github.io/
       - uses: actions/configure-pages@v1
       - uses: actions/upload-pages-artifact@v4
         with:
