--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Archive production artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: Static-Site-Assets
+          name: github-pages
           path: public/transrally.github.io/
 
   # Single deploy job since we're just deploying
