--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,19 +31,19 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
       - run: npm ci
       - run: npm run-script build
       - name: Archive production artifacts
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         with:
-          name: github-pages
-          path: public/transrally.github.io/
+          name: Static-Site-Assets
+          path: public/github.transrally.io
 
   # Single deploy job since we're just deploying
   deploy:
@@ -53,12 +53,12 @@ jobs:
       name: github-pages
       url: ${{steps.deployment.outputs.page_url}}
     steps:
-      - uses: actions/download-artifact@v4
+      - uses: actions/download-artifact@master
         with:
           name: Static-Site-Assets
-          path: public/transrally.github.io/
+          path: .
       - uses: actions/configure-pages@v1
-      - uses: actions/upload-pages-artifact@v3
+      - uses: actions/upload-pages-artifact@v1
         with:
           path: .
       - id: deployment
