--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -18,7 +18,7 @@ jobs:
       - name: npm install and coverage
         run: |
           npm install
-          npm coverage
+          npm run-script coverage
       - name: Archive code coverage results
         uses: actions/upload-artifact@v4
         with:
