--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "transrally.github.io",
   "version": "0.0.0",
   "scripts": {
+    "e2e:test": "./node_modules/.bin/nightwatch --env 'chrome' --config './nightwatch.conf.js'",
     "ng": "ng",
     "start-dev": "ng serve",
     "start": "node server.js",
@@ -11,7 +12,7 @@
     "deploy": "gh-pages -d build",
     "test": "ng test --watch false",
     "coverage": "ng test --no-watch --code-coverage",
-    "e2e": "nightwatch --reporter=json  -o tests_output -c nightwatch.conf.js",
+    "e2e": "ng e2e",
     "e2e:firefox": "nightwatch -r integration-testing/html-reporter.js -o tests_output -c nightwatch.conf.js -e firefox",
     "e2e:safari": "nightwatch -r integration-testing/html-reporter.js -o tests_output -c nightwatch.conf.js -e safari",
     "e2e:edge": "nightwatch  -r integration-testing/html-reporter.js -o tests_output nightwatch.conf.js -e edge",
@@ -31,7 +32,7 @@
     "@angular/platform-browser-dynamic": "^16.1.4",
     "@angular/router": "^16.1.4",
     "@ng-bootstrap/ng-bootstrap": "^15.1.0",
-    "bootstrap": "^5.3.3",
+    "bootstrap": "^5.3.1",
     "express-rate-limit": "^6.7.0",
     "express.js": "^1.0.0",
     "jquery": "^3.7.0",
@@ -41,18 +42,22 @@
     "zone.js": "~0.13.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.14",
-    "@angular/cli": "~17.3.7",
+    "@angular-devkit/build-angular": "^16.1.4",
+    "@angular/cli": "~16.1.4",
     "@angular/compiler-cli": "^16.1.4",
     "@angular/localize": "^16.1.4",
-    "@cucumber/cucumber": "^10.7.0",
+    "@cucumber/cucumber": "^7.1.0",
     "@cucumber/pretty-formatter": "^1.0.0",
-    "@nightwatch/mobile-helper": "^0.1.13",
+    "@nightwatch/angular": "3.1.1",
+    "@nightwatch/mobile-helper": "^0.1.12",
+    "@nightwatch/schematics": "^1.2.1",
     "@types/chai": "^4.3.5",
     "@types/cucumber": "^6.0.1",
     "@types/jasmine": "~4.0.0",
-    "@types/mocha": "^10.0.6",
-    "@types/node": "^20.12.12",
+    "@types/mocha": "^10.0.4",
+    "@types/nightwatch": "2.3.31",
+    "@types/node": "^20.4.1",
+    "chai": "^5.1.1",
     "chromedriver": "^119.0.1",
     "cucumber": "^6.0.7",
     "cucumber-html-reporter": "^6.0.0",
@@ -67,9 +72,11 @@
     "karma-coverage": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
+    "karma-jasmine-html-reporter": "~2.0.0",
+    "karma-junit-reporter": "^2.0.1",
     "karma-spec-reporter": "^0.0.36",
-    "nightwatch": "^3.6.3",
+    "mocha": "^10.4.0",
+    "nightwatch": "^3.0.1",
     "nightwatch-html-reporter": "^2.0.6",
     "nohup": "^0.1.0",
     "path": "^0.12.7",
