Feature/other updates (#26)
* upgrade to anular 18

* updates

* dedupe

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "transrally.github.io",
-  "version": "0.0.0",
+  "version": "0.9.9",
   "scripts": {
     "e2e:test": "./node_modules/.bin/nightwatch --env 'chrome' --config './nightwatch.conf.js'",
     "ng": "ng",
@@ -12,11 +12,11 @@
     "deploy": "gh-pages -d build",
     "test": "ng test --watch false",
     "coverage": "ng test --no-watch --code-coverage",
-    "e2e": "ng e2e",
-    "e2e:firefox": "nightwatch -r integration-testing/html-reporter.js -o tests_output -c nightwatch.conf.js -e firefox",
-    "e2e:safari": "nightwatch -r integration-testing/html-reporter.js -o tests_output -c nightwatch.conf.js -e safari",
-    "e2e:edge": "nightwatch  -r integration-testing/html-reporter.js -o tests_output nightwatch.conf.js -e edge",
-    "e2e:chrome": "nightwatch  -r integration-testing/html-reporter.js -o tests_output nightwatch.conf.js -e chrome",
+    "e2e": "nightwatch  -r ./e2e/html-reporter.js -o tests_output nightwatch.conf.js -e chrome",
+    "e2e:firefox": "nightwatch -r e2e/html-reporter.js -o tests_output -c nightwatch.conf.js -e firefox",
+    "e2e:safari": "nightwatch -r e2e/html-reporter.js -o tests_output -c nightwatch.conf.js -e safari",
+    "e2e:edge": "nightwatch  -r e2e/html-reporter.js -o tests_output nightwatch.conf.js -e edge",
+    "e2e:chrome": "nightwatch  -r e2e/html-reporter.js -o tests_output nightwatch.conf.js -e chrome",
     "dockerBuild": "docker build -f Dockerfile -t transrally.github.io .",
     "dockerRun": "docker run  --env=PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin --workdir=/ -p 8080:8080 --runtime=runc -d transrally.github.io:latest"
   },
@@ -30,13 +30,12 @@
     "@angular/platform-browser": "^18.0.2",
     "@angular/platform-browser-dynamic": "^18.0.2",
     "@angular/router": "^18.0.2",
-    "bootstrap": "^5.3.1",
-    "express-rate-limit": "^6.7.0",
+    "bootstrap": "^5.3.3",
+    "express-rate-limit": "^7.3.0",
     "express.js": "^1.0.0",
-    "jquery": "^3.7.0",
-    "ng2-pdf-viewer": "^9.1.5",
+    "jquery": "^3.7.1",
     "popper.js": "^1.16.1",
-    "rxjs": "~7.5.0",
+    "rxjs": "~7.8.1",
     "zone.js": "~0.14.6"
   },
   "devDependencies": {
@@ -44,33 +43,34 @@
     "@angular/cli": "~18.0.3",
     "@angular/compiler-cli": "^18.0.2",
     "@angular/localize": "^18.0.2",
-    "@cucumber/cucumber": "^7.1.0",
-    "@cucumber/pretty-formatter": "^1.0.0",
-    "@nightwatch/angular": "3.1.1",
-    "@nightwatch/mobile-helper": "^0.1.12",
+    "@cucumber/cucumber": "^10.8.0",
+    "@cucumber/pretty-formatter": "^1.0.1",
+    "@nightwatch/angular": "^3.1.1",
+    "@nightwatch/mobile-helper": "^0.1.14",
     "@nightwatch/schematics": "^1.2.1",
-    "@types/chai": "^4.3.5",
+    "@swc/core": "^1.5.25",
+    "@types/chai": "^4.3.16",
     "@types/cucumber": "^6.0.1",
     "@types/jasmine": "~5.1.4",
-    "@types/mocha": "^10.0.4",
+    "@types/mocha": "^10.0.6",
     "@types/nightwatch": "2.3.31",
-    "@types/node": "^20.4.1",
+    "@types/node": "^20.14.2",
     "chai": "^5.1.1",
-    "chromedriver": "^125.0.0",
+    "chromedriver": "^125.0.3",
     "cucumber": "^6.0.7",
-    "cucumber-html-reporter": "^7.1.1",
+    "cucumber-html-reporter": "^6.0.0",
     "cucumber-pretty": "^6.0.1",
     "fs": "^0.0.1-security",
-    "geckodriver": "^4.0.4",
-    "gh-pages": "^5.0.0",
-    "handlebars": "^4.7.7",
-    "jasmine-core": "~4.3.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.2.0",
+    "geckodriver": "^4.4.1",
+    "gh-pages": "^6.1.1",
+    "handlebars": "^4.7.8",
+    "jasmine-core": "~5.1.2",
+    "karma": "~6.4.3",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.1",
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0",
+    "karma-jasmine-html-reporter": "~2.1.0",
     "karma-junit-reporter": "^2.0.1",
     "karma-spec-reporter": "^0.0.36",
     "mocha": "^10.4.0",
@@ -78,8 +78,8 @@
     "nightwatch-html-reporter": "^2.0.6",
     "nohup": "^0.1.0",
     "path": "^0.12.7",
-    "ts-node": "^10.9.1",
-    "tslib": "^2.6.0",
+    "ts-node": "^10.9.2",
+    "tslib": "^2.6.3",
     "typescript": "^5.4.5"
   },
   "publishConfig": {
