--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /tmp
 /out-tsc
 /bazel-out
+/e2e/tests_output
 
 # Node
 /node_modules
@@ -38,6 +39,7 @@ yarn-error.log
 /libpeerconnection.log
 testem.log
 /typings
+.env
 
 # System files
 .DS_Store
