--- a/angular.json
+++ b/angular.json
@@ -100,7 +100,7 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
-            "assets": ["src/favicon.ico", "src/assets"],
+            "assets": ["src/media/favicon.ico", "src/assets"],
             "styles": ["src/styles.css"],
             "scripts": []
           }
